--- a/dashboard/src/app/pages/add-incident/persons-form/persons-form.component.html
+++ b/dashboard/src/app/pages/add-incident/persons-form/persons-form.component.html
@@ -11,7 +11,7 @@
     <div>
       <mat-form-field>
         <mat-label>{{ 'INCIDENT.NUMBER_AFFECTED' | translate }}</mat-label>
-        <input matInput type="number" placeholder="0" (keydown)="numberInputOnly($event)" formControlName="numberOfPatients" (blur)="updatePatients()" />
+        <input matInput min="0" type="number" placeholder="0" (keydown)="numberInputOnly($event)" formControlName="numberOfPatients" (blur)="updatePatients()" />
       </mat-form-field>
     </div>
     <div class="patient-table">
@@ -26,7 +26,8 @@
           <td mat-cell *matCellDef="let element">
             <mat-form-field>
               <mat-label>{{ 'INCIDENT.AFFECTED_AGE' | translate }}</mat-label>
-              <input type="number" matInput placeholder="20" [(ngModel)]="element.age" [ngModelOptions]="{standalone: true}"/>
+              <input type="number" min="0" oninput="this.value = !!this.value && Math.abs(this.value) >= 0 ? Math.abs(this.value) : null"
+              matInput placeholder="20" [(ngModel)]="element.age" [ngModelOptions]="{standalone: true}"/>
             </mat-form-field>
           </td>
         </ng-container>
