--- a/dashboard/src/app/pages/dispatcher/dispatcher.component.html
+++ b/dashboard/src/app/pages/dispatcher/dispatcher.component.html
@@ -129,7 +129,7 @@
 
             <ng-container matColumnDef="type">
               <th mat-header-cell *matHeaderCellDef> Type </th>
-              <td mat-cell *matCellDef="let element"> <span *ngIf="recommended.has(element.id)"
+              <td mat-cell *matCellDef="let element"> <span *ngIf="recommended.has(element.id) && (element.assignedIncident != selectedIncident)"
                   style="color: green;">{{'DISPATCHER.RECOMMENDED' | translate}} <br></span> {{element.type}} </td>
             </ng-container>
 
